-
Bug
-
Resolution: Done
-
P2: Important
-
6.3.2, 6.4.0 Beta4
-
None
-
-
205e31df16 (qt/qtdeclarative/dev) 205e31df16 (qt/tqtc-qtdeclarative/dev) ef6fe3e499 (qt/qtdeclarative/6.4) ef6fe3e499 (qt/tqtc-qtdeclarative/6.4) 8435926668 (qt/tqtc-qtdeclarative/6.2) fe7122e17b (qt/qtdeclarative/6.3)
HoverHandler "eats" all hover events even when disabled. Regression from Qt 6.2.4.
Code sample:
import QtQuick Window { width: 640 height: 480 visible: true Rectangle { anchors.fill: parent color: hh.hovered ? 'red' : 'white' HoverHandler { id: hh } } Item { enabled: false // disabling parent item also has no effect anchors.fill: parent HoverHandler { enabled: false } // "eats" hover events even when disabled } }
- relates to
-
QTBUG-30801 Button: tooltip not shown when the button is disabled
-
- Closed
-
For Gerrit Dashboard: QTBUG-106548 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
432319,2 | DA: ignore disabled items when delivering hover events | dev | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
432411,6 | DA: ignore disabled HoverHandlers when delivering hover events | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
433268,2 | DA: ignore disabled HoverHandlers when delivering hover events | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
433269,2 | DA: ignore disabled HoverHandlers when delivering hover events | 6.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
433317,2 | DA: ignore disabled HoverHandlers when delivering hover events | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |